<resources>
    <string name="app_name">Room</string>
    <string name="action_settings">Settings</string>
    <string name="movie_name">Movie Name:</string>
    <string name="studio_name">Studio Name:</string>
    <string name="movie">Movie</string>
    <string name="category">Category:</string>
    <string name="categories">Category</string>
    <string name="agregar_pelicula">Agregar Pelicula</string>
    <string name="submit">Submit</string>
    <string name="studio">Studio</string>
    <string name="nombre">Nombre</string>
    <string name="std">Studio</string>
</resources>
