<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add"
    android:background="#000">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agregar_pelicula"
            android:textSize="30sp"
            android:textColor="#FFF"
            android:gravity="center"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:textSize="20sp"
            android:textColorHint="#FFF"
            android:textColor="#FFF"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/txtStudio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/std"
            android:textSize="20sp"
            android:textColor="#FFF"
            android:textColorHint="#FFF"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/txtCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/categories"
            android:textSize="20sp"
            android:textColor="#FFF"
            android:textColorHint="#FFF"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginBottom="10dp"
            android:background="#0D47A1"
            android:textColor="#FFF"
            />

    </LinearLayout>


</FrameLayout>