<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:id="@+id/card_view"
    card_view:cardUseCompatPadding="true"
    android:elevation="7dp"
    card_view:cardCornerRadius="2dp"
    android:background="#0D47A1">


    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:background="#0D47A1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="#FFF"
                android:text="@string/movie_name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="#FFF"
                android:text="@string/movie"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/studio"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="#FFF"
                android:text="@string/studio_name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="#FFF"
                android:text="@string/studio"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="#FFF"
                android:text="@string/category"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cat"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="#FFF"
                android:text="@string/categories"/>

        </LinearLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>